hphp/hack/test/typecheck/refinements/neg_num_arraykey.php.exp
File "neg_num_arraykey.php", line 8, characters 19-20:
Invalid argument (Typing[4110])
  File "neg_num_arraykey.php", line 46, characters 24-29:
  Expected `string`
  File "neg_num_arraykey.php", line 7, characters 13-20:
  But got `int` from this `is` expression test
File "neg_num_arraykey.php", line 9, characters 18-19:
Invalid argument (Typing[4110])
  File "neg_num_arraykey.php", line 48, characters 23-27:
  Expected `float`
  File "neg_num_arraykey.php", line 5, characters 10-12:
  But got `string`
File "neg_num_arraykey.php", line 9, characters 18-19:
Invalid argument (Typing[4110])
  File "neg_num_arraykey.php", line 48, characters 23-27:
  Expected `float`
  File "neg_num_arraykey.php", line 7, characters 13-20:
  But got `int` from this `is` expression test
File "neg_num_arraykey.php", line 10, characters 16-17:
Invalid argument (Typing[4110])
  File "neg_num_arraykey.php", line 47, characters 21-23:
  Expected `int`
  File "neg_num_arraykey.php", line 5, characters 10-12:
  But got `string`
File "neg_num_arraykey.php", line 11, characters 16-17:
Invalid argument (Typing[4110])
  File "neg_num_arraykey.php", line 50, characters 21-23:
  Expected `num`
  File "neg_num_arraykey.php", line 5, characters 10-12:
  But got `string`
File "neg_num_arraykey.php", line 15, characters 19-20:
Invalid argument (Typing[4110])
  File "neg_num_arraykey.php", line 46, characters 24-29:
  Expected `string`
  File "neg_num_arraykey.php", line 7, characters 13-20:
  But got `float` from this `is` expression test
File "neg_num_arraykey.php", line 17, characters 16-17:
Invalid argument (Typing[4110])
  File "neg_num_arraykey.php", line 47, characters 21-23:
  Expected `int`
  File "neg_num_arraykey.php", line 7, characters 13-20:
  But got `float` from this `is` expression test
File "neg_num_arraykey.php", line 19, characters 21-22:
Invalid argument (Typing[4110])
  File "neg_num_arraykey.php", line 49, characters 26-33:
  Expected `arraykey`
  File "neg_num_arraykey.php", line 7, characters 13-20:
  But got `float` from this `is` expression test
File "neg_num_arraykey.php", line 30, characters 19-20:
Invalid argument (Typing[4110])
  File "neg_num_arraykey.php", line 46, characters 24-29:
  Expected `string`
  File "neg_num_arraykey.php", line 29, characters 13-15:
  But got `num`
File "neg_num_arraykey.php", line 31, characters 18-19:
Invalid argument (Typing[4110])
  File "neg_num_arraykey.php", line 48, characters 23-27:
  Expected `float`
  File "neg_num_arraykey.php", line 29, characters 13-15:
  But got `num`
File "neg_num_arraykey.php", line 32, characters 16-17:
Invalid argument (Typing[4110])
  File "neg_num_arraykey.php", line 47, characters 21-23:
  Expected `int`
  File "neg_num_arraykey.php", line 29, characters 13-15:
  But got `num`
File "neg_num_arraykey.php", line 34, characters 21-22:
Invalid argument (Typing[4110])
  File "neg_num_arraykey.php", line 49, characters 26-33:
  Expected `arraykey`
  File "neg_num_arraykey.php", line 29, characters 13-15:
  But got `num`
File "neg_num_arraykey.php", line 38, characters 18-19:
Invalid argument (Typing[4110])
  File "neg_num_arraykey.php", line 48, characters 23-27:
  Expected `float`
  File "neg_num_arraykey.php", line 29, characters 13-15:
  But got `string` from this `is` expression test
File "neg_num_arraykey.php", line 39, characters 16-17:
Invalid argument (Typing[4110])
  File "neg_num_arraykey.php", line 47, characters 21-23:
  Expected `int`
  File "neg_num_arraykey.php", line 29, characters 13-15:
  But got `string` from this `is` expression test
File "neg_num_arraykey.php", line 40, characters 16-17:
Invalid argument (Typing[4110])
  File "neg_num_arraykey.php", line 50, characters 21-23:
  Expected `num`
  File "neg_num_arraykey.php", line 29, characters 13-15:
  But got `string` from this `is` expression test
